@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2016-07-06
  * Allow qualifiers in Rest generate_relationship to be passed a comparison operator. 
+ * wing.angular.js objectListManager on_each is now passed the objectManager instance of each object in addition to its properties.
 
 2016-06-30
  * Updated the Facebook SSO API to work with Facebook's nonsense.
